gccida/c2/store_by_pieces_1
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/store_by_pieces_1/src/expr.c:2915:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v8; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/store_by_pieces_1/src/expr.c:2916:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v9; // ecx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/store_by_pieces_1/src/expr.c:2917:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode i; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/store_by_pieces_1/src/expr.c:2920:36: error: redefinition of parameter 'rtx'
 struct rtx_def *(  *genfun)( rtx, rtx); // r12 
                                   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/store_by_pieces_1/src/expr.c:2920:31: error: a parameter list without types is only allowed in a function definition
 struct rtx_def *(  *genfun)( rtx, rtx); // r12 
                              ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/store_by_pieces_1/src/expr.c:2924:4: error: expected ';' after expression
rtx v17; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/store_by_pieces_1/src/expr.c:2924:5: error: use of undeclared identifier 'v17'
rtx v17; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/store_by_pieces_1/src/expr.c:2932:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v25; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/store_by_pieces_1/src/expr.c:2933:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v26; // r14d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/store_by_pieces_1/src/expr.c:2935:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v28; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/store_by_pieces_1/src/expr.c:2938:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v31; // [rsp+8h] [rbp-40h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/store_by_pieces_1/src/expr.c:3054:41: error: redefinition of parameter 'rtx'
genfun = (  struct rtx_def *(  *)( rtx, rtx))insn_data_0[insn_code].genfun; 
                                        ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/store_by_pieces_1/src/expr.c:3054:36: error: a parameter list without types is only allowed in a function definition
genfun = (  struct rtx_def *(  *)( rtx, rtx))insn_data_0[insn_code].genfun; 
                                   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/store_by_pieces_1/src/expr.c:3062:1: error: use of undeclared identifier 'v17'
v17 = adjust_automodify_address_1( to, v8, data->to_addr, data->offset, 1); 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/store_by_pieces_1/src/expr.c:3064:1: error: use of undeclared identifier 'v17'
v17 = adjust_address_1( to, v8, data->offset, 1, 1); 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/store_by_pieces_1/src/expr.c:3065:7: error: use of undeclared identifier 'v17'
v18 = v17; 
      ^
16 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/store_by_pieces_1/src/obj/expr.o] Error 1
